--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
+aiofiles==24.1.0
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.10
+aiosignal==1.3.1
 annotated-types==0.7.0
 anthropic==0.37.1
 anyio==4.6.0
+attrs==24.2.0
 cachetools==5.5.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
 distro==1.9.0
 filelock==3.16.1
+frozenlist==1.5.0
 fsspec==2024.10.0
 google-ai-generativelanguage==0.6.10
 google-api-core==2.22.0
@@ -23,10 +29,12 @@ httpx==0.27.2
 huggingface-hub==0.26.2
 idna==3.10
 jiter==0.5.0
+multidict==6.1.0
 numpy==2.1.1
 openai==1.52.2
 packaging==24.1
 pandas==2.2.3
+propcache==0.2.1
 proto-plus==1.25.0
 protobuf==5.28.3
 pyasn1==0.6.1
@@ -48,3 +56,4 @@ typing_extensions==4.12.2
 tzdata==2024.2
 uritemplate==4.1.1
 urllib3==2.2.3
+yarl==1.18.3
